<resources>
    <string name="app_name">LaserChessApp</string>
    <string name="settings">Ajustes</string>
    <string name="notifications">Notificaciones</string>
    <string name="timer">Timer</string>
    <string name="game_board">Game Board</string>
    <string name="history">History</string>
    <string name="ranked">Ranked</string>
    <string name="play">Jugar</string>
    <string name="time_mode">MODO DE TIEMPO</string>
    <string name="avatar">Avatar</string>
    <string name="elo">ELO</string>
    <string name="coin">Coin</string>
    <string name="title_activity_game">GameActivity</string>

    <string name="personal_data">Datos personales</string>

    <string name="loginTitle">¡Hola de nuevo!</string>
    <string name="loginSubtitle">Te estábamos esperando</string>
    <string name="login">Iniciar sesión</string>
    <string name="credential">name@example.com / username</string>
    <string name="password">******</string>
    <string name="continueText">Continuar</string>
    <string name="noAccount">¿No tienes una cuenta? Prueba a </string>
    <string name="switch_register">registrarte</string>

    <string name="registerTitle">Crear una cuenta</string>
    <string name="registerSubtitle">¡La diversión comienza aquí!</string>
    <string name="register">Registrarse</string>
    <string name="username">Nombre de usuario</string>
    <string name="mail">E-mail</string>
    <string name="mail_address">name@example.com</string>
    <string name="yesAccount">¿Ya tienes una cuenta?</string>
    <string name="switch_login">Inicia sesión</string>

    <string name="customize">Personalización</string>
    <string name="ranking">Ranking</string>
    <string name="shop">Tienda</string>
    <string name="social">Social</string>

    <string name="empty_friends_message">Aún no has empezado ninguna amistad...</string>
    <string name="add">AÑADIR</string>
    <string name="write_username">Enviar solicitud</string>
    <string name="send_request">ENVIAR SOLICITUD</string>
    <string name="wait_approval">Y espera a ser aceptad@.</string>
    <string name="send_link">Envíale el siguiente enlace:</string>
    <string name="copy">COPIAR</string>
    <string name="close">Cerrar</string>
    <string name="separator_or">O</string>
    <string name="hint_username">Ej: Usuario123</string>

    <string name="request_match">SOLICITAR PARTIDA</string>
    <string name="delete">ELIMINAR</string>
    <string name="time_mode_blitz">Blitz</string>
    <string name="time_mode_rapid">Rapid</string>
    <string name="time_mode_classic">Classic</string>
    <string name="time_mode_extended">Extended</string>

    <string name="rank">RANGO</string>
    <string name="blitz_rank">Rango Blitz</string>
    <string name="rapid_rank">Rango Rapid</string>
    <string name="classic_rank">Rango Classic</string>
    <string name="extended_rank">Rango Extended</string>

    <string name="equipped">EQUIPADO</string>
    <string name="piece_skin">Piezas</string>
    <string name="piece_skin_desc">Skin piezas</string>
    <string name="board_skin">Tablero</string>
    <string name="board_skin_desc">Skin tablero</string>
    <string name="animation">Animación</string>
    <string name="animation_desc">Animación de fin de partida</string>

    <string name="requests">SOLICITUDES</string>
    <string name="received_requests">Recibidas</string>
    <string name="no_received_requests">No has recibido ninguna solicitud de amistad</string>
    <string name="sent_requests">Enviadas</string>
    <string name="no_sent_requests">No has enviado ninguna solicitud de amistad</string>
    <string name="accept">ACEPTAR</string>
    <string name="reject">RECHAZAR</string>
    <string name="cancel_request">CANCELAR SOLICITUD</string>

    <string name="edit_avatar">Editar avatar</string>
    <string name="edit_username">Editar nombre de usuario</string>
    <string name="edit_equipped">Editar equipo</string>
    <string name="edit_email">Editar email</string>

    <string name="change_password">¿Deseas cambiar tu contraseña?</string>
    <string name="eliminate_account">¿Deseas eliminar tu cuenta?</string>
    <string name="music">Música</string>
    <string name="sound_effects">Efectos de sonido</string>
    <string name="logout">Cerrar sesión</string>

    <string name="previous">Anterior</string>
    <string name="next">Siguiente</string>
    <string name="item">Artículo</string>
    <string name="profile_card_level_format">LVL %1$d · %2$d/%3$d</string>

    <string name="replay_back">Regresar</string>
    <string name="replay_step_forward">Siguiente movimiento</string>
    <string name="replay_step_backward">Movimiento anterior</string>
    <string name="replay_fast_forward">Final de la partida</string>
    <string name="replay_fast_backward">Inicio de la partida</string>
    <string name="configure_match">Configurar partida</string>
    <string name="searching_match">Buscando partida</string>
    <string name="empty_paused_games_message">No tienes partidas pausadas</string>
</resources>