<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="24dp"
        android:background="@color/S1"
        android:elevation="8dp"
        android:layout_margin="32dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loginTitle"
            android:textSize="@dimen/text_medium_large"
            android:textColor="@color/LCWhite"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loginSubtitle"
            android:textSize="@dimen/text_medium_small"
            android:textColor="@color/LCGray"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="16dp"/>

        <!-- Separador -->
        <include layout="@layout/separator" />

        <EditText
            android:id="@+id/editTextCredential"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/credential"
            android:textColorHint="@android:color/darker_gray"
            android:inputType="textNoSuggestions"
            android:padding="12dp"
            android:layout_marginBottom="16dp"
            android:textColor="@color/LCWhite"
            android:textSize="@dimen/text_medium"
            android:background="@drawable/bg_text_field"/>

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:textColorHint="@android:color/darker_gray"
            android:inputType="textPassword"
            android:padding="12dp"
            android:layout_marginBottom="24dp"
            android:textColor="@color/LCWhite"
            android:textSize="@dimen/text_medium"
            android:background="@drawable/bg_text_field" />

        <!-- Separador -->
        <include layout="@layout/separator" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonLoginContinue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textSize="16sp"
            android:textColor="@color/LCWhite"
            android:background="@drawable/bg_blue_button"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="16dp"
            android:padding="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/noAccount"
                android:textSize="@dimen/text_medium_small"
                android:textColor="@color/LCWhite"/>

            <TextView
                android:id="@+id/textViewGoToRegisterLink"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="@string/switch_register"
                android:textSize="@dimen/text_medium_small"
                android:textColor="#2196F3"
                android:textStyle="bold"
                android:clickable="true"
                android:focusable="true"/>

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>