<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="20dp">

    <!-- Caja principal -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/bg_modal_border"
        android:padding="24dp">

        <!-- Botón cerrar -->
        <ImageButton
            android:id="@+id/buttonCloseMyProfileDialog"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="start"
            android:background="@drawable/bg_box_border"
            android:src="@drawable/ic_close"
            android:contentDescription="@string/close"
            android:padding="8dp"
            android:layout_marginBottom="12dp" />

        <!-- Cabecera perfil -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="top"
            android:layout_marginBottom="8dp">

           <!-- Avatar + editar avatar -->
            <FrameLayout
                android:layout_width="86dp"
                android:layout_height="86dp"
                android:layout_marginEnd="16dp" >

                <ImageView
                    android:id="@+id/imageMyProfileAvatar"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_avatar"
                    android:contentDescription="@string/avatar" />

                <ImageButton
                    android:id="@+id/buttonEditAvatar"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="top|end"
                    android:background="@drawable/bg_box_border"
                    android:contentDescription="@string/edit_avatar"
                    android:padding="5dp"
                    android:src="@drawable/ic_edit" />

            </FrameLayout>

            <!-- Username + ProgressBar -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:layout_marginBottom="8dp" >
                    <TextView
                        android:id="@+id/txtMyProfileUsername"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text=""
                        android:textSize="26sp"
                        android:textStyle="bold"
                        android:maxLines="1"
                        android:textColor="@android:color/black"
                        android:ellipsize="end" />

                    <ImageButton
                        android:id="@+id/buttonEditUsername"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_marginStart="8dp"
                        android:background="@drawable/bg_box_border"
                        android:contentDescription="@string/edit_username"
                        android:padding="5dp"
                        android:src="@drawable/ic_edit" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical">

                    <TextView
                        android:id="@+id/txtMyProfileLevel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:text=""
                        android:textSize="14sp"
                        android:textStyle="bold"
                        android:textColor="@android:color/black" />

                    <ProgressBar
                        android:id="@+id/progressMyProfileXp"
                        style="?android:attr/progressBarStyleHorizontal"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:max="100"
                        android:progress="0" />

                    <TextView
                        android:id="@+id/txtMyProfileXp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:text=""
                        android:textSize="13sp"
                        android:textColor="@android:color/black"/>

                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

        <!-- Monedas -->
        <LinearLayout
            android:id="@+id/layoutMyProfileCoins"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="20dp"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/txtMyProfileCoins"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textColor="@android:color/black"
                android:textSize="22sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="6dp"
                android:contentDescription="@string/coin"
                android:src="@drawable/ic_coin" />

        </LinearLayout>

        <!-- Encabezado tabla rankings -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="12dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.4"
                android:text="@string/time_mode"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@android:color/black" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="20dp"
                android:layout_weight="0.8"
                android:src="@drawable/ic_elo"
                android:contentDescription="@string/elo"
                android:scaleType="fitCenter"
                android:layout_gravity="center_vertical" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.8"
                android:text="@string/rank"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:gravity="center" />

        </LinearLayout>

        <!-- Fila Blitz -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="8dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.4"
                android:text="@string/time_mode_blitz"
                android:textSize="18sp"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/txtBlitzMyElo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.8"
                android:text=""
                android:textSize="18sp"
                android:textColor="@android:color/black"
                android:gravity="center" />

            <ImageView
                android:id="@+id/imageBlitzMyRank"
                android:layout_width="0dp"
                android:layout_height="24dp"
                android:layout_weight="0.8"
                android:src="@drawable/ic_rank_placeholder"
                android:contentDescription="@string/blitz_rank"
                android:adjustViewBounds="true" />
        </LinearLayout>

        <!-- Fila Rapid -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="8dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.4"
                android:text="@string/time_mode_rapid"
                android:textSize="18sp"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/txtRapidMyElo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.8"
                android:text=""
                android:textSize="18sp"
                android:textColor="@android:color/black"
                android:gravity="center" />

            <ImageView
                android:id="@+id/imageRapidMyRank"
                android:layout_width="0dp"
                android:layout_height="24dp"
                android:layout_weight="0.8"
                android:src="@drawable/ic_rank_placeholder"
                android:contentDescription="@string/rapid_rank"
                android:adjustViewBounds="true" />

        </LinearLayout>

        <!-- Fila Classic -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="8dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.4"
                android:text="@string/time_mode_classic"
                android:textSize="18sp"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/txtClassicMyElo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.8"
                android:text=""
                android:textSize="18sp"
                android:textColor="@android:color/black"
                android:gravity="center" />

            <ImageView
                android:id="@+id/imageClassicMyRank"
                android:layout_width="0dp"
                android:layout_height="24dp"
                android:layout_weight="0.8"
                android:src="@drawable/ic_rank_placeholder"
                android:contentDescription="@string/classic_rank"
                android:adjustViewBounds="true" />
        </LinearLayout>

        <!-- Fila Extended -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="24dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.4"
                android:text="@string/time_mode_extended"
                android:textSize="18sp"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/txtExtendedMyElo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.8"
                android:text=""
                android:textSize="18sp"
                android:textColor="@android:color/black"
                android:gravity="center" />

            <ImageView
                android:id="@+id/imageExtendedMyRank"
                android:layout_width="0dp"
                android:layout_height="24dp"
                android:layout_weight="0.8"
                android:src="@drawable/ic_rank_placeholder"
                android:contentDescription="@string/extended_rank"
                android:adjustViewBounds="true" />
        </LinearLayout>

        <!-- Equipado + editar -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/equipped"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@android:color/black" />

            <ImageButton
                android:id="@+id/buttonEditEquipped"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_marginStart="10dp"
                android:background="@drawable/bg_box_border"
                android:contentDescription="@string/edit_equipped"
                android:padding="5dp"
                android:src="@drawable/ic_edit" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <LinearLayout
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:background="@drawable/bg_box_border"
                android:padding="12dp"
                android:layout_marginEnd="20dp">

                <ImageView
                    android:id="@+id/imageMyPieceSkin"
                    android:layout_width="52dp"
                    android:layout_height="52dp"
                    android:src="@drawable/ic_piece_placeholder"
                    android:contentDescription="@string/piece_skin_desc" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/piece_skin"
                    android:textSize="11sp"
                    android:textColor="@android:color/black"
                    android:layout_marginTop="8dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:background="@drawable/bg_box_border"
                android:padding="12dp"
                android:layout_marginEnd="20dp">

                <ImageView
                    android:id="@+id/imageMyBoardSkin"
                    android:layout_width="52dp"
                    android:layout_height="52dp"
                    android:src="@drawable/ic_board_placeholder"
                    android:contentDescription="@string/board_skin_desc" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/board_skin"
                    android:textSize="11sp"
                    android:textColor="@android:color/black"
                    android:layout_marginTop="8dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:background="@drawable/bg_box_border"
                android:padding="12dp" >

                <ImageView
                    android:id="@+id/imageMyWinAnimation"
                    android:layout_width="52dp"
                    android:layout_height="52dp"
                    android:src="@drawable/ic_piece_placeholder"
                    android:contentDescription="@string/animation_desc" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/animation"
                    android:textSize="11sp"
                    android:textColor="@android:color/black"
                    android:layout_marginTop="8dp" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</FrameLayout>